<resources>
    <string name="app_name">News App</string>
    <string name="no_news">No news found.</string>
    <string name="no_internet_connection">No internet connection.</string>

    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>

    <string name="settings_section_label">Section Endpoint</string>
    <string name="settings_section_summary">Select the kind section that you would like to see</string>
    <string name="settings_section_key" translatable="false">section</string>
    <string name="settings_section_default" translatable="false">about</string>

    <string name="settings_page_size_label">Page Size</string>
    <string name="settings_page_size_summary">Modify the number of items displayed per page</string>
    <string name="settings_page_size_key" translatable="false">page_size</string>
    <string name="settings_page_size_default" translatable="false">10</string>
</resources>