<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <EditTextPreference
        android:defaultValue="@string/settings_page_size_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_page_size_key"
        android:selectAllOnFocus="true"
        android:summary="@string/settings_page_size_summary"
        android:title="@string/settings_page_size_label" />

    <ListPreference
        android:title="@string/settings_section_label"
        android:summary="@string/settings_section_summary"
        android:key="@string/settings_section_key"
        android:defaultValue="@string/settings_section_default"
        android:entries="@array/listArray"
        android:entryValues="@array/listValues" />

</PreferenceScreen>